fixed some spacing issues

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -229,7 +229,7 @@
          margin: 0 auto;
          padding: 0;
          box-sizing: border-box;
-         margin-left: 100px;
+         margin-left: 90px;
       }
 
       .top-header {
@@ -258,6 +258,7 @@
          justify-content: center;
          align-items: center;
       }
+
    
       .left-part {
          display: flex;
